k8s/ansari-project-proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ansari-project-proxy
  namespace: shuttle-apps

spec:
  replicas: 1

  selector:
    matchLabels:
      app: ansari-project-proxy

  template:
    metadata:
      labels:
        app: ansari-project-proxy

    spec:
      containers:
        - name: ansari-project-proxy
          image: ansarishaban777/ansari-project-proxy:v1
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 80

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: ansari-project-proxy-service
  namespace: shuttle-apps

spec:
  type: NodePort

  selector:
    app: ansari-project-proxy

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
