k8s/infra.yml
apiVersion: v1
kind: Namespace
metadata:
  name: shuttle-apps

---

apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: shuttle-apps
spec:
  type: ExternalName
  externalName: host.minikube.internal

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-server
  namespace: shuttle-apps

spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 6379

          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "250m"

          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 5

---

apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: shuttle-apps

spec:
  type: ClusterIP

  selector:
    app: redis

  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
