k8s/lovable-clone-service.yml
apiVersion: v1
kind: Service
metadata:
  name: lovable-clone-service
  namespace: shuttle-apps

spec:
  type: NodePort

  selector:
    app: lovable-clone

  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
